--- a/Wosad.WebApi/packages.config
+++ b/Wosad.WebApi/packages.config
@@ -6,6 +6,8 @@
 <packages>
   <package id="bootstrap" version="3.0.0" targetFramework="net45" />
   <package id="Clipper" version="6.2.10" targetFramework="net45" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
+  <package id="DynamoVisualProgramming.Core" version="0.9.0" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
@@ -16,6 +18,12 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="Wosad.Common" version="0.0.1.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
+  <package id="NUnit" version="2.6.3" targetFramework="net45" />
+  <package id="Prism" version="4.1.0.0" targetFramework="net45" />
+  <package id="Wosad.Analysis" version="0.0.1.7" targetFramework="net45" />
+  <package id="Wosad.Common" version="0.0.3.3" targetFramework="net45" />
+  <package id="Wosad.Concrete" version="0.0.3.3" targetFramework="net45" />
+  <package id="Wosad.Loads" version="0.0.1.1" targetFramework="net45" />
+  <package id="Wosad.Steel" version="0.0.3.3" targetFramework="net45" />
 </packages>
