--- a/Wosad.Productivity.Tools.DynamoNodesToWebApiConverter/DynamoNodesToWebApiConverter.csproj
+++ b/Wosad.Productivity.Tools.DynamoNodesToWebApiConverter/DynamoNodesToWebApiConverter.csproj
@@ -99,6 +99,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <Content Include="LICENSE" />
+    <Content Include="NOTICE" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
